[package]

name = "pistoncore-glfw_window"
version = "0.13.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "leonkunert <info@leonkunert.de>",
    "mitchmindtree <me@michellnordine.com>",
    "Christiandh",
    "Apointos",
    "ccgn",
    "reem",
    "TyOverby <ty@pre-alpha.com>"]
keywords = ["glfw", "window", "piston"]
description = "A GLFW window back-end for the Piston game engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/glfw_window.git"
homepage = "https://github.com/pistondevelopers/glfw_window"

[lib]
name = "glfw_window"

[dependencies]
pistoncore-window = "0.13.0"
pistoncore-input = "0.8.0"
shader_version = "0.2.1"
glfw = "0.2.0"
gl = "0.3.0"
